# NeuroNet

./: .gitignore  CMakeLists.txt  Doxyfile  NeuroNet.h  README.md  kernel.cu  libNeuroNet.filters  libNeuroNet.sln  libNeuroNet.vcxproj  libNeuroNet.vcxproj.filters  main.cpp
algebra/: matrix2.h  matrix3.h  vectorN.h
algorithm/: Adam.h  Algorithm.h  BackProp.cpp  BackProp.h  GradientBase.cpp  GradientBase.h  GradientDescent.cpp  GradientDescent.h  GreedyPolicy.cpp  GreedyPolicy.h  IEnvironment.h  LearningAlgorithm.cpp  LearningAlgorithm.h  Optimizer.cpp  Optimizer.h  QLearning.cpp  QLearning.h  RMSProp.cpp  RMSProp.h  SARSA.cpp  SARSA.h  StochasticGradientDescent.cpp  StochasticGradientDescent.h  TD.h  TDLambda.cpp  TDLambda.h
algorithm/exploration/: BoltzmannExploration.cpp  BoltzmannExploration.h  IExploration.h  eGreedy.cpp  eGreedy.h
algorithm/optimizer/: ADAM.cpp  ADAM.h  BackProp.cpp  BackProp.h  Optimizer.cpp  Optimizer.h  RMSProp.cpp  RMSProp.h  TDBP.cpp  TDBP.h
algorithm/rec/: RTRL.cpp  RTRL.h
algorithm/rl/: Actor.cpp  Actor.h  ActorCritic.cpp  ActorCritic.h  ActorLearning.cpp  ActorLearning.h  CACLA.cpp  CACLA.h  CACLAActor.cpp  CACLAActor.h  Critic.cpp  Critic.h  DeepQLearning.cpp  DeepQLearning.h  NGAC.cpp  NGAC.h  NaturalGradientActor.cpp  NaturalGradientActor.h  QLearning.cpp  QLearning.h  QNatLearning.cpp  QNatLearning.h  RGAC.cpp  RGAC.h  RegularGradientActor.cpp  RegularGradientActor.h  SARSA.cpp  SARSA.h  SimpleActor.cpp  SimpleActor.h  TD.cpp  TD.h  TDLambda.cpp  TDLambda.h
backend/: Matrix.cpp  Matrix.h
backend/flab/: Base.cpp  Base.h  Matrix.cpp  Matrix.h  RandomGenerator.cpp  RandomGenerator.h  Vector.cpp  Vector.h
backend/sflab/: Base.cpp  Base.h  Matrix.cpp  Matrix.h  RandomGenerator.cpp  RandomGenerator.h  Tensor3.cpp  Tensor3.h  Vector.cpp  Vector.h
dataset/: Dataset.cpp  Dataset.h  DatasetCore.h  SequenceDataset.cpp  SequenceDataset.h  StringUtils.cpp  StringUtils.h
doc/html/: _actor_critic_8cpp.html  _actor_critic_8cpp__incl.dot  _actor_critic_8cpp__incl.md5  _actor_critic_8h.html  _actor_critic_8h__dep__incl.dot  _actor_critic_8h__dep__incl.md5  _actor_critic_8h__incl.dot  _actor_critic_8h__incl.md5  _actor_critic_8h_source.html  _algorithm_8h_source.html  _back_prop_8cpp.html  _back_prop_8cpp__incl.dot  _back_prop_8cpp__incl.md5  _back_prop_8h.html  _back_prop_8h__dep__incl.dot  _back_prop_8h__dep__incl.md5  _back_prop_8h__incl.dot  _back_prop_8h__incl.md5  _back_prop_8h_source.html  _c_a_c_l_a_8cpp.html  _c_a_c_l_a_8cpp__incl.dot  _c_a_c_l_a_8cpp__incl.md5  _c_a_c_l_a_8h.html  _c_a_c_l_a_8h__dep__incl.dot  _c_a_c_l_a_8h__dep__incl.md5  _c_a_c_l_a_8h__incl.dot  _c_a_c_l_a_8h__incl.md5  _c_a_c_l_a_8h_source.html  _c_a_c_l_a_actor_8cpp.html  _c_a_c_l_a_actor_8cpp__incl.dot  _c_a_c_l_a_actor_8cpp__incl.md5  _c_a_c_l_a_actor_8h.html  _c_a_c_l_a_actor_8h__dep__incl.dot  _c_a_c_l_a_actor_8h__dep__incl.md5  _c_a_c_l_a_actor_8h__incl.dot  _c_a_c_l_a_actor_8h__incl.md5  _c_a_c_l_a_actor_8h_source.html  _connection_8cpp.html  _connection_8cpp__incl.dot  _connection_8cpp__incl.md5  (+541 more)
docs/html/: _actor_critic_8cu.html  _back_prop_8cpp.html  _back_prop_8cu.html  _back_prop_8h.html  _back_prop_8h_source.html  _bandit_game_8cpp.html  _connection_8cpp.html  _connection_8h.html  _connection_8h_source.html  _define_8h.html  _define_8h_source.html  _n_bandit_8cpp.html  _neural_group_8cu.html  _neural_group_8h.html  _neural_group_8h_source.html  _neural_network_8cpp.html  _neural_network_8h.html  _neural_network_8h_source.html  _r_e_a_d_m_e_8md.html  _t_d_8cu.html  _t_d_8h.html  _t_d_8h_source.html  _t_d_lambda_8cu.html  annotated.html  class_back_prop-members.html  class_back_prop.html  class_connection-members.html  class_connection.html  class_neural_group-members.html  class_neural_group.html  class_neural_network-members.html  class_neural_network.html  class_t_d-members.html  class_t_d.html  classes.html  classmatrix-members.html  classmatrix.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  (+19 more)
docs/latex/: _back_prop_8cpp.tex  _bandit_game_8cpp.tex  _connection_8cpp.tex  _n_bandit_8cpp.tex  _neural_network_8cpp.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  matrix_8cpp.tex  refman.tex  sample__td_8cpp.tex
doxygen/: Doxyfile
environments/: Environment.cpp  Environment.h
environments/cartpole/: CartPole.cpp  CartPole.h
environments/maze/: Maze.cpp  Maze.h  MazeAction.h
environments/stochastic_game/: AreaDefenseGame.cpp  AreaDefenseGame.h
environments/tic_tac_toe/: TicTacToe.cpp  TicTacToe.h
include/: ActorCritic.h  BackProp.h  BanditGame.h  Connection.h  Define.h  IEnvironment.h  Maze.h  NBandit.h  NeuralGroup.cuh  NeuralGroup.h  NeuralNetwork.h  TD.h  TDLambda.h  matrix.h  matrix2.h  matrix3.h  network.cuh  network_kernel.cuh  vectorN.h  vector_kernel.cuh
mns/: Dataset.cpp  ModelMNS.cpp  ModelMNS.h  Sequence.cpp  Sequence.h
network/: Connection.cpp  Connection.h  Define.h  Network.h  NetworkUtils.cpp  NetworkUtils.h  NeuralGroup.cpp  NeuralGroup.h  NeuralNetwork.cpp  NeuralNetwork.h  RandomGenerator.cpp  RandomGenerator.h
network/filters/: IFilter.h  (+4 more)
samples/: BanditGame.cpp  BanditGame.h  CartPoleTask.cpp  CartPoleTask.h  LunarLander.cpp  LunarLander.h  Maze.cpp  Maze.h  MazeOld.cpp  MazeOld.h  MazeTask.cpp  MazeTask.h  MountainCar.cpp  MountainCar.h  NBandit.cpp  NBandit.h  PoleCart.cpp  PoleCart.h  TicTacToeTask.cpp  TicTacToeTask.h  sampleALE.cpp  sampleActor.cpp  sampleCartPoleRL.cpp  sampleCartPoleRL.h  sampleDigits.cpp  sampleGameRL.cpp  sampleGameRL.h  sampleLunarLander.cpp  sampleMSOM.cpp  sampleMazeRL.cpp  sampleMazeRL.h  sampleMountainCar.cpp  samplePoleCart.cpp  sampleQ.cpp  sampleQ.h  sampleSARSA.cpp  sampleSOM.cpp  sampleSOM.h  sampleTDAC.cpp  sample_bp.cpp  (+4 more)
src/: BackProp.cpp  BackProp.cu  BanditGame.cpp  CUDALib.cu  Connection.cpp  Maze.cpp  NBandit.cpp  NeuralGroup.cpp  NeuralGroup.cu  NeuralNetwork.cpp  TD.cu  TDLambda.cpp  TDLambda.cu  main.cpp  matrix.cpp  network.cu  network_kernel.cu  sample_bp.cpp  sample_bp.cu  sample_td.cpp  vector_kernel.cu
(+142 files in other folders)
